# lungs-segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  results.ipynb  setup.cfg
classical_algorithms/: dataset_generator.py  ilastik.py  lungs_segmentation_ct.ipynb  run_ilastik.py
src/UNet_lungs_segmentation/: cli.py  lungs_predict.py  napari.yaml  utils.py
src/UNet_lungs_segmentation/napari_plugin/: __init__.py  plugin.py
src/unet_lungs_segmentation/: __init__.py  cli.py  lungs_predict.py  model.py  napari.yaml  utils.py
training/: dataloader.py  dataset.csv  model_testing.ipynb  training.ipynb  training.json  training_model.py
training/utils/: utils.py  validation_set_generator.py
