[metadata]
name = unet-lungs-segmentation
version = 1.0.4
description = 3D U-Net model for the segmentation of the lungs in mice CT scans.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/titi1000/lungs-segmentation.git
project_urls =
    Source Code = https://github.com/titi1000/lungs-segmentation.git

author = Quentin Chappuis, Center for Imaging, Ecole Polytechnique Federale de Lausanne (EPFL)
author_email = quentin.chappuis@epfl.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    # Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    magicgui
    qtpy
    napari[all]>=0.4.16
    napari-label-focus
    tifffile
    scikit-image
    matplotlib
    csbdeep
    python-dotenv

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    UNet-lungs-segmentation = unet_lungs_segmentation:napari.yaml
console_scripts = 
    uls_predict_image = unet_lungs_segmentation.cli:cli_predict_image
    uls_predict_folder = unet_lungs_segmentation.cli:cli_predict_folder

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml
